Fixed typo in yaml file

--- a/.github/workflows/toml_mitre_validation.yml
+++ b/.github/workflows/toml_mitre_validation.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: |
-          python developement/validation.py
+          python development/validation.py
           python development/mitre.py
           
