--- a/.github/workflows/toml_mitre_validation.yml
+++ b/.github/workflows/toml_mitre_validation.yml
@@ -12,8 +12,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11.4'
-      - run: |
-          pip install requests
-          python development/validation.py
-          python development/mitre.py
+      - run: pip install requests
+      - run: python development/validation.py
+      - run: python development/mitre.py
           
