--- a/detections/data_archive_for_exfil.toml
+++ b/detections/data_archive_for_exfil.toml
@@ -6,7 +6,7 @@ author = ["Sudharsan Narasimhan"]
 description = """This alert looks for .zip files being created in a file path containing Windows\\Temp."""
 from = "now-6m"
 name = "Data Archive for Potential Exfil"
-
+risk_score = 50
 severity = "medium"
 type = "query"
 rule_id = "00000000-0000-0000-0000-000000000002"
@@ -17,7 +17,7 @@ event.dataset : "endpoint.events.file" and event.action : (creation or overwrite
 [[rule.threat]]
 framework = "MITRE ATT&CK"
 [[rule.threat.technique]]
-id = "T1046"
+id = "T1074"
 name = "Data Staged"
 reference = "https://attack.mitre.org/techniques/T1074/"
 [[rule.threat.technique.subtechnique]]
