--- a/.github/workflows/all_detections_to_elastic.yml
+++ b/.github/workflows/all_detections_to_elastic.yml
@@ -1,20 +1,19 @@
-name: TOML/MITRE Validation
+name: All Detections to Elastic
 
 on:
-  push:
-    path:
-      - '**.toml'
   workflow_dispatch:
 
+
 jobs:
-  toml-validation:
+  elastic-detections-all:
     runs-on: ubuntu-latest
+    env:
+      ELASTIC_KEY: ${{secrets.ELASTIC_KEY}}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11.4'
       - run: pip install requests
-      - run: python development/validation.py
-      - run: python development/mitre.py
+      - run: python development/toml_to_json.py
           
