testing update action

--- a/.github/workflows/elastic_sync.yml
+++ b/.github/workflows/elastic_sync.yml
@@ -23,10 +23,8 @@ jobs:
       # NOTE: `since_last_remote_commit: true` is implied by default and falls back to the previous local commit.
 
       - name: List all changed files
-        env:
-          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
-          run: |
-            for file in ${ALL_CHANGED_FILES}; do
-              echo "$file was changed"
-            done
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
+            echo "$file was changed"
+          done
           
