--- a/.github/workflows/elastic_sync.yml
+++ b/.github/workflows/elastic_sync.yml
@@ -26,8 +26,8 @@ jobs:
       
       - name: Run Update Script
         env:
-          ELASTIC_KEY = ${{ secrets.ELASTIC_KEY }}
-          CHANGED_FILES = ${{ steps.changed-files.outputs.all_changed_files }}
+          ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
+          CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
         run: |
           pip install requests
           python development/update_alert.py
