--- a/detections/new_alert.toml
+++ b/detections/new_alert.toml
@@ -5,11 +5,11 @@ creation_date = "2023/07/11"
 author = ["Sudharsan Narasimhan"]
 description = "From looking at the sysmon_operational logs, we're triggering on powershell running through a bat file execution."
 from = "now-6m"
-name = "PowerShell Execution via a BAT File"
-risk_score = 50
+name = "New Alert"
+risk_score = 80
 severity = "medium"
 type = "query"
-rule_id = "00000000-0000-0000-0000-000000000006"
+rule_id = "00000000-0000-0000-0000-0000000000011"
 query = '''
 process.command_line : powershell* and process.parent.command_line : *bat* and process.parent.name: cmd.exe
 '''
