--- a/.github/workflows/elastic_sync.yml
+++ b/.github/workflows/elastic_sync.yml
@@ -22,16 +22,15 @@ jobs:
         with:
           python-version: '3.11.4'  
 
-      - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v45
+      #- name: Get changed files
+        #id: changed-files
+        #uses: tj-actions/changed-files@v45
       
-      - name: Run Update Script
-        env:
-          ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
-          CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
-        run: |
-          pip install requests
-          python development/update_alert.py
-
+     # - name: Run Update Script
+       # env:
+       #   ELASTIC_KEY: ${{ secrets.ELASTIC_KEY }}
+       #   CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+      #  run: |
+       #   pip install requests
+        #  python development/update_alert.py
           
